[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/AudioOptions.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Shade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.156863, 0.133333, 0.588235 )

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 644.0
margin_bottom = 462.0
size_flags_vertical = 0
custom_constants/separation = 32

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 31.0
text = "Paused
"
align = 1
valign = 1

[node name="ButtonResume" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 612.0
margin_bottom = 83.0
text = "Resume"

[node name="ButtonRestart" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 612.0
margin_bottom = 135.0
text = "Restart"

[node name="ButtonQuitToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 612.0
margin_bottom = 187.0
text = "Quit to Main Menu"

[node name="ButtonQuitToDesktop" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 612.0
margin_bottom = 239.0
text = "Quit to Desktop"

[node name="AudioOptions" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 115.0
margin_right = -236.0
margin_bottom = -169.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuitToMainMenu" to="." method="_on_button_quit_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuitToDesktop" to="." method="_on_button_quit_to_desktop_pressed"]
